# triton-msl

./: .gitignore  CHANGELOG.md  CITING.md  CONTRIBUTING.md  README.md  REFERENCES.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.superpowers/sdd/: task-4-report.md
benchmarks/: bench_all.py  bench_compile_shader.py  bench_copy_overhead.py  bench_regression.py  hw_harness.py  mlx_vs_pyobjc.py
docs/: ARCHITECTURE.md  CHECKPOINT.md  INSTRUMENTS.md  ROADMAP.md  SUPPORTED_OPS.md  tridec-bug-report-response-2026-06-10.md  tridec-bug2-2ndshape-2026-06-13.md  tridec-bug2-2ndshape-followup-2026-06-13.md  tridec-bug2-followup-2026-06-11.md  tridec-bug2-inloop-fix-2026-06-13.md  tridec-bug2-resolved-2026-06-13.md  tridec-real-relay-silentwrong-2026-06-13.md  triton-ext-alignment.md  workplan-nover-coverage-2026-06-14.md
docs/audits/: 2026-06-16-phase5-readiness-audit.md
docs/superpowers/plans/: 2026-04-08-sizePerThread-fix.md  2026-04-13-cpp-mlir-nano-backend.md  2026-04-14-cpp-cooperative-ops.md  2026-04-14-cpp-metallib-expansion.md  2026-05-21-multi-element-per-thread.md  2026-06-04-ws1-phaseC-matmul-mma.md  2026-06-09-phase0-hygiene.md  2026-06-09-phase1-plan1-diff-harness-elementwise.md  2026-06-11-mept-m1-regval-foundation.md  2026-06-12-mept-m2-scf-for-arrays.md  2026-06-12-mept-m3a-scf-for-array-iterargs.md  2026-06-13-fp16-bf16-atomics.md  2026-06-13-i64-reduce-where-transpose.md  2026-06-13-inloop-reduce-coverage.md  2026-06-13-mept-m5-flip.md  2026-06-13-mept-select-arraywire.md  2026-06-13-nd-cat.md  2026-06-13-nd-transpose.md  2026-06-14-compile-shader-zerocopy.md  2026-06-15-fast-matmul-routing.md  2026-06-15-fp16-output-fast-matmul.md  2026-06-17-large-head-dim-flash-attention.md  2026-06-18-2d-gather-coverage.md  2026-06-18-inductor-backend-port.md  2026-06-20-matmul-rrrc-autotune.md  2026-06-20-simdgroup-flash-attention.md
docs/superpowers/specs/: 2026-04-14-cpp-cooperative-ops-design.md  2026-05-30-triton-metal-roadmap.md  2026-05-30-triton-msl-roadmap.md  2026-05-30-ws0-c4-cpp-build-evaluation.md  2026-05-30-ws0-foundation-design.md  2026-06-04-ws1-phaseC-matmul-mma-design.md  2026-06-07-matmul-fused-epilogue-design.md  2026-06-09-name-decision.md  2026-06-09-phase1-cpp-port-design.md  2026-06-09-pre1.0-port-first-roadmap-design.md  2026-06-11-language-ir-target-decision.md  2026-06-11-mept-register-array-spine-design.md  2026-06-11-phase1-cpp-blocker.md  2026-06-13-fp16-bf16-atomics-design.md  2026-06-13-i64-reduce-where-transpose-design.md  2026-06-13-inloop-reduce-coverage-design.md  2026-06-13-mept-m5-flip-design.md  2026-06-13-mept-select-arraywire-bug2-inloop.md  2026-06-13-nd-cat-design.md  2026-06-13-nd-transpose-design.md  2026-06-14-compile-shader-zerocopy-design.md  2026-06-15-fast-matmul-routing-design.md  2026-06-15-fp16-output-fast-matmul-design.md  2026-06-17-large-head-dim-flash-attention-design.md  2026-06-20-matmul-rrrc-autotune-design.md  2026-06-20-simdgroup-flash-attention-design.md
examples/: demo.py
reports/: baseline.json  cpp_coverage.json  perf_baseline.json  upstream_test_core.json  upstream_test_core.txt
scripts/: bench_compilation.py  conftest_metal.py  dump_atomic_ttgir.py  run_upstream_test.sh  run_upstream_tests.py
tests/: conftest.py  test_atomic_nover_refusal.py  test_atomics_integrity.py  test_audit_2026_06_21_silent_wrongs.py  test_autotuner.py  test_b4_constexpr_batch.py  test_barrier_lowering.py  test_cache_versioning.py  test_compile_shader_parity.py  test_compile_shader_perf.py  test_compile_shader_runtime.py  test_cpp_backend.py  test_cpp_families.py  test_diff_cpp_python.py  test_differential_sweep.py  test_disasm.py  test_emitter.py  test_error_handling.py  test_fa_detect.py  test_fa_simdgroup_diff.py  test_fa_simdgroup_routing.py  test_fa_simdgroup_template.py  test_fa_tiled_template.py  test_fast_matmul_detect.py  test_fast_matmul_gate.py  test_fast_matmul_parity.py  test_fast_matmul_perf.py  test_fast_matmul_template.py  test_flash_attention.py  test_fp16_atomics.py  test_fuzz_combinations.py  test_fuzz_differential.py  test_fuzz_matmul.py  test_fuzz_reduce.py  test_gather_2d.py  test_gather_large_src.py  test_generic_lowerer.py  test_i64_ops.py  test_inloop_reduce_coverage.py  test_inloop_reduce_where.py  (+40 more)
tests/golden/: simdgroup_matmul_fast_fp16in_fp32out.msl  simdgroup_matmul_fast_fp32in_fp32out.msl
triton_metal/: __init__.py  errors.py
triton_metal/backend/: compile_shader_runtime.py  compiler.py  cpp_families.py  device_detect.py  driver.py
triton_metal/codegen/: _linear_layout.py  _lowerer_control.py  _lowerer_detection.py  _lowerer_emission.py  _lowerer_reduce.py  _lowerer_templates.py  _msl_templates.py  generic_lowerer.py  mlir_walker.py  msl_builtins.py  msl_emitter.py  refusal_catalog.py  regval.py
triton_metal/csrc/: CMakeLists.txt
triton_metal/inductor/: __init__.py
triton_metal/profiling/: disasm.py  roofline.py
triton_msl/: .gitignore  __init__.py  buffer_pool.py  debug.py  errors.py
triton_msl/autotuning/: __init__.py  _fast_matmul_dispatch.py  autotuner.py  matmul_tuner.py
triton_msl/backend/: __init__.py  compile_shader_runtime.py  compiler.py  cpp_families.py  device_detect.py  driver.py
triton_msl/codegen/: _device_func_lowerer.py  _lowerer_control.py  _lowerer_detection.py  _lowerer_emission.py  _lowerer_helpers.py  _lowerer_reduce.py  _lowerer_templates.py  _msl_templates.py  generic_lowerer.py  msl_builtins.py  msl_emitter.py  msl_types.py  refusal_catalog.py  ttgir_parser.py
triton_msl/csrc/: CMakeLists.txt  python_bindings.cpp  python_bindings_bridge.cpp
triton_msl/csrc/include/triton_msl/Conversion/: TritonMSLToLLVM.h
triton_msl/csrc/lib/Conversion/: CMakeLists.txt  DotOpToLLVM.cpp  ElementwiseOpToLLVM.cpp  SharedMemoryAliasingPass.cpp  SharedMemoryOpToLLVM.cpp  TritonMSLToLLVM.cpp
triton_msl/inductor/: README.md  __init__.py  metal_libdevice.py
triton_msl/mlx/: __init__.py  mlx_launcher.py  msl_extractor.py
triton_msl/profiling/: metal_bench.py
